fixed the tweet text overflowing by doing a word-wrap: break-word; for .tweetersText

--- a/public/styles/allTweets.css
+++ b/public/styles/allTweets.css
@@ -72,6 +72,7 @@
   margin-left: 1.5vw;
   margin-right: 1vw;
   margin-bottom: -5px;
+  word-wrap: break-word;
 }
 
 /* DESKTOP CSS */
